--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,19 +1,30 @@
 FROM python:3.11-slim
 
-WORKDIR /app
-
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install Poetry
+RUN pip install poetry
 
-# Install Playwright and browsers
-RUN playwright install --with-deps chromium
+# Configure Poetry
+ENV POETRY_NO_INTERACTION=1 \
+    POETRY_VENV_IN_PROJECT=1 \
+    POETRY_CACHE_DIR=/tmp/poetry_cache
+
+WORKDIR /app
+
+# Copy poetry files
+COPY pyproject.toml poetry.lock* ./
+
+# Install dependencies
+RUN poetry install --only=main && rm -rf $POETRY_CACHE_DIR
+
+# Install Playwright browsers
+RUN poetry run playwright install --with-deps chromium
 
 # Copy source code
 COPY src/ ./src/
@@ -22,4 +33,4 @@ COPY src/ ./src/
 EXPOSE 8000
 
 # Run the application
-CMD ["python", "-m", "src.main"]
+CMD ["poetry", "run", "start"]
