--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "commit": "git-cz"
   },
   "devDependencies": {
-    "turbo": "^1.10.0",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "husky": "^8.0.3",
+    "@types/node": "^20.0.0",
     "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0"
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.3",
+    "oxlint": "^1.5.0",
+    "turbo": "^1.10.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
