--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "vitest"
+    "test": "vitest run --passWithNoTests",
+    "lint": "oxlint"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
