--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "test": "vitest run --passWithNoTests",
     "test:e2e": "playwright test",
-    "lint": "oxlint"
+    "lint": "oxlint",
+    "build:css": "tailwindcss -i ./src/assets/styles.css -o ./src/assets/tailwind.css --watch"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
@@ -26,6 +27,7 @@
     "@types/node": "^20.9.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/tsconfig": "^0.4.0",
+    "postcss": "^8.5.6",
     "typescript": "~5.2.0",
     "unplugin-swc": "^1.5.5",
     "vite": "^4.5.0",
