fix(workflow): update branch filters in commitlint workflow

--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -2,9 +2,9 @@ name: Commit Message Validation
 
 on:
   push:
-    branches: [master]
+    branches: ["**"]
   pull_request:
-    branches: [master]
+    branches: ["**"]
 
 jobs:
   commitlint:
