fix(workflow): restrict branches for commitlint to master only

--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -2,9 +2,9 @@ name: Commit Message Validation
 
 on:
   push:
-    branches: ["**"]
+    branches: [master]
   pull_request:
-    branches: ["**"]
+    branches: [master]
 
 jobs:
   commitlint:
